# javaguard

./: README.md  package.json
lib/: index.js
native/: Cargo.toml
native/src/: java.rs  lib.rs  mojang.rs  openjdk.rs
