[package]
name = "java-guard"
version = "0.1.0"
authors = ["Joseph \"Dunkel\" Zurowski <12567900+Dunklheit@users.noreply.github.com>"]
license = "GPL-3.0"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "java_guard"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
